# mandelbrot

./: mandelbrot.cabal
app/: Main.hs
